force-app/main/default/objects/PAC_Contribution__c/PAC_Contribution__c.object-meta.xml
<CustomObject>
    <description>Tracks individual PAC contributions from the FEC Schedule A filings. Links contributing PACs to recipient campaign committees.</description>
    <label>PAC Contribution</label>
    <nameField>
        <displayFormat>PAC-{0000}</displayFormat>
        <label>PAC Contribution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PAC Contributions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>