force-app/main/default/objects/PAC_Contribution__c/fields/Contributing_Account__c.field-meta.xml
<CustomField>
    <fullName>Contributing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Salesforce Account associated with the contributing PAC.</description>
    <label>Contributing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PAC Contributions Made</relationshipLabel>
    <relationshipName>PAC_Contributions_Made</relationshipName>
    <type>Lookup</type>
</CustomField>