force-app/main/default/objects/PAC_Contribution__c/fields/Contribution_Amount__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Amount__c</fullName>
    <label>Contribution Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>