force-app/main/default/objects/PAC_Contribution__c/fields/Contribution_Date__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Date__c</fullName>
    <label>Contribution Date</label>
    <type>Date</type>
</CustomField>