force-app/main/default/objects/PAC_Contribution__c/fields/Contributor_Committee__c.field-meta.xml
<CustomField>
    <fullName>Contributor_Committee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The PAC or committee making the contribution.</description>
    <label>Contributor Committee</label>
    <referenceTo>FEC_Committee__c</referenceTo>
    <relationshipLabel>Contributions Made</relationshipLabel>
    <relationshipName>Contributions_Made</relationshipName>
    <type>Lookup</type>
</CustomField>