force-app/main/default/objects/PAC_Contribution__c/fields/Contributor_Committee_Name__c.field-meta.xml
<CustomField>
    <fullName>Contributor_Committee_Name__c</fullName>
    <description>Denormalized contributor committee name for reporting and list views.</description>
    <label>Contributor Committee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>