force-app/main/default/objects/PAC_Contribution__c/fields/Filing_Date__c.field-meta.xml
<CustomField>
    <fullName>Filing_Date__c</fullName>
    <label>Filing Date</label>
    <type>Date</type>
</CustomField>