force-app/main/default/objects/PAC_Contribution__c/fields/Recipient_Committee__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Committee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The campaign committee receiving the contribution.</description>
    <label>Recipient Committee</label>
    <referenceTo>FEC_Committee__c</referenceTo>
    <relationshipLabel>Contributions Received</relationshipLabel>
    <relationshipName>Contributions_Received</relationshipName>
    <type>Lookup</type>
</CustomField>