force-app/main/default/objects/PAC_Contribution__c/fields/Recipient_Committee_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Committee_Name__c</fullName>
    <description>Denormalized recipient committee name for reporting and list views.</description>
    <label>Recipient Committee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>