force-app/main/default/objects/PAC_Contribution__c/fields/Recipient_Legislator__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Legislator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The legislator receiving the contribution (via their campaign committee).</description>
    <label>Recipient Legislator</label>
    <referenceTo>Legislator__c</referenceTo>
    <relationshipLabel>PAC Contributions Received</relationshipLabel>
    <relationshipName>PAC_Contributions_Received</relationshipName>
    <type>Lookup</type>
</CustomField>