force-app/main/default/objects/PAC_Contribution__c/fields/Source_FEC_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_FEC_ID__c</fullName>
    <description>FEC committee id for the contributor source record, used to match Accounts by Account.FEC_ID__c.</description>
    <label>Source FEC ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>