force-app/main/default/objects/PAC_Contribution__c/fields/Source_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Name__c</fullName>
    <description>Raw contributor name from the FEC Schedule A receipt.</description>
    <label>Source Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>