force-app/main/default/objects/PAC_Contribution__c/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <description>FEC sub_id used as the external identifier for upsert operations.</description>
    <externalId>true</externalId>
    <label>Transaction ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>